[package]
name = "loxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.3.1", features = ["termination"] }
phf = { version = "0.11.1", features = ["macros"] }
rstest = {version= "0.17.0",  default-features = false }
unicode-segmentation = "1.10.1"
